--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
@@ -48,6 +49,18 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "phpcs": "./vendor/bin/phpcs --standard=phpcs.xml",
+        "phpcbf": "./vendor/bin/phpcbf --standard=phpcs.xml",
+        "install-hooks": [
+            "copy 'pre-commit.sh .git/hooks/pre-commit'",
+            "chmod +x .git/hooks/pre-commit"
+        ],
+        "pre-install-cmd": [
+            "@install-hooks"
+        ],
+        "post-install-cmd": [
+            "@install-hooks"
         ]
     },
     "extra": {
